--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         }
     ],
     "require": {
+        "composer-plugin-api": "^2.0",
+        "symfony/console": "^4.0 || ^5.0 || ^6.0",
+        "composer/composer": "^2.0"
     }
 }
